--- a/public/updates.html
+++ b/public/updates.html
@@ -38,6 +38,30 @@
     #diff-modal iframe{width:100%;height:100%;border:0}
     #diff-modal-close{position:absolute;top:5px;right:5px;padding:8px;color:#fff;background:rgba(0,0,0,.5);border:0;border-radius:50%;cursor:pointer}
   </style>
+
+<script>
+    (function () {
+        const OPT_KEY = "analytics_opt_in";
+        const optRaw = localStorage.getItem(OPT_KEY);
+        const optIn = (optRaw === null || optRaw === "1");
+        window.dataLayer = window.dataLayer || [];
+        window.gtag = window.gtag || function () { dataLayer.push(arguments); };
+        if (!optIn) {
+            console.info("Analytics disabled (set localStorage.analytics_opt_in = "1" to enable).");
+            return;
+        }
+        const load = (src, onload) => {
+            const s = document.createElement("script");
+            s.async = true;
+            s.src = src;
+            s.onload = onload || null;
+            s.onerror = () => console.info("Analytics blocked:", src);
+            document.head.appendChild(s);
+        };
+        load("https://www.googletagmanager.com/gtag/js?id=G-TYB723GLDF", () => { gtag("js", new Date()); gtag("config", "G-TYB723GLDF"); });
+        load("https://www.clarity.ms/tag/v2u1vmbhil");
+    })();
+</script>
 </head>
 <body>
 <header class="top">
