Fix sitemap panel placeholder in updates page

--- a/public/updates.html
+++ b/public/updates.html
@@ -33,6 +33,7 @@
   </script>
 </head>
 <body class="text-slate-100 soft-bg min-h-screen">
+  <div id="sitemap-panel-placeholder"></div>
   <!-- Common Header -->
   <header class="sticky top-0 z-50 backdrop-blur bg-black/20 border-b border-white/10">
     <div class="max-w-6xl mx-auto px-4">
