--- a/public/changes.html
+++ b/public/changes.html
@@ -83,7 +83,7 @@
   <!-- 공통 헤더 끝 -->
 
   <!-- 사이트맵 패널 시작 (layout.js에서 처리) -->
-  <div class="sitemap-panel" id="sitemapPanel">
+  <div class="sitemap-panel" id="sitemapPanel" style="display:none">
     <div class="sitemap-card">
       <div class="flex justify-between items-center gap-2 mb-4">
         <h3 class="text-xl font-bold m-0">사이트맵</h3>
