Use shared sitemap stylesheet

--- a/public/changes.html
+++ b/public/changes.html
@@ -33,6 +33,7 @@
         load("https://www.clarity.ms/tag/v2u1vmbhil");
     })();
 </script>
+  <link rel="stylesheet" href="/assets/sitemap.css" />
 </head>
 <body class="text-slate-100 soft-bg min-h-screen">
   <!-- 공통 헤더 시작 -->
@@ -83,7 +84,7 @@
   <!-- 공통 헤더 끝 -->
 
   <!-- 사이트맵 패널 시작 (layout.js에서 처리) -->
-  <div class="sitemap-panel" id="sitemapPanel" style="display:none">
+  <div class="sitemap-panel" id="sitemapPanel">
     <div class="sitemap-card">
       <div class="flex justify-between items-center gap-2 mb-4">
         <h3 class="text-xl font-bold m-0">사이트맵</h3>
