--- a/public/updates.html
+++ b/public/updates.html
@@ -31,6 +31,7 @@
         load("https://www.clarity.ms/tag/v2u1vmbhil");
     })();
   </script>
+  <link rel="stylesheet" href="/assets/sitemap.css" />
 </head>
 <body class="text-slate-100 soft-bg min-h-screen">
   <div id="sitemap-panel-placeholder"></div>
